# npsv3

./: .dockerignore  .gitignore  .gitmodules  7.10Initial.py  7.13Encoder.py  7.9Initial.ipynb  7.9Initial.py  CMakeCache.txt  CMakeLists.txt  Cal_SV_Image_Embedding.ipynb  DINOV3toLightningCkpt  Dockerfile  Dockerfile.arm64  LICENSE.txt  Makefile  README.md  SAMPLE_PLAN.md  cmake_install.cmake  dataset_checker.py  environment.yml  img_view.py  model_test.py  pyproject.toml  pytest.ini  ruff_defaults.toml  seqlib.patch  setup.py  slurm-69359.out  slurm-69368.out  slurm-69785.out  slurm-70539.out  slurm_model_test.sh  submit.sh  testing.py
.claude/: settings.json
ada_output/: slurm_model_test-60376.out  slurm_model_test-60420.out  slurm_model_test-60421.out  slurm_model_test-60422.out  slurm_model_test-60427.out  slurm_model_test-60468.out  slurm_model_test-60536.out
ada_output/62581/: slurm_model_test-62581.out
ada_output/62583/: slurm_model_test-62583.out
ada_output/64293/: slurm_model_test-64293.out
ada_output/64344/: slurm_model_test-64344.out
ada_output/64345/: slurm_model_test-64345.out
ada_output/64995/: slurm_model_test-64995.out
ada_output/65001/: slurm_model_test-65001.out
ada_output/65003/: slurm_model_test-65003.out
ada_output/65739/: slurm_model_test-65739.out
ada_output/65758/: slurm_model_test-65758.out
ada_output/65759/: slurm_model_test-65759.out
ada_output/65762/: slurm_model_test-65762.out
ada_output/65763/: slurm_model_test-65763.out
ada_output/65765/: slurm_model_test-65765.out
ada_output/65766/: slurm_model_test-65766.out
ada_output/65767/: slurm_model_test-65767.out
ada_output/65771/: slurm_model_test-65771.out
ada_output/65772/: slurm_model_test-65772.out
ada_output/65816/: slurm_model_test-65816.out
ada_output/65826/: slurm_model_test-65826.out
ada_output/65859/: slurm_model_test-65859.out
ada_output/65868/: slurm_model_test-65868.out
ada_output/65869/: slurm_model_test-65869.out
ada_output/68175/: slurm_model_test-68175.out
ada_output/68176/: slurm_model_test-68176.out
ada_output/68177/: slurm_model_test-68177.out
ada_output/68222/: slurm_model_test-68222.out
ada_output/68225/: slurm_model_test-68225.out
ada_output/68233/: slurm_model_test-68233.out
ada_output/69573/: slurm_model_test-69573.out
ada_output/69574/: slurm_model_test-69574.out
ada_output/69575/: slurm_model_test-69575.out
ada_output/69576/: slurm_model_test-69576.out
ada_output/69743/: slurm_model_test-69743.out
ada_output/69744/: slurm_model_test-69744.out
ada_output/69783/: slurm_model_test-69783.out
ada_output/70541/: slurm_model_test-70541.out
ada_output/70548/: slurm_model_test-70548.out
ada_output/70550/: slurm_model_test-70550.out
ada_output/70627/: slurm_model_test-70627.out
ada_output/70635/: slurm_model_test-70635.out
ada_output/70636/: slurm_model_test-70636.out
ada_output/70643/: slurm_model_test-70643.out
ada_output/70644/: slurm_model_test-70644.out
ada_output/70901/: slurm_model_test-70901.out
ada_output/70902/: slurm_model_test-70902.out
cmake/: FindGBWT.cmake  FindHTSLib.cmake  FindKMC.cmake  FindLibBDSG.cmake  FindODGI.cmake  FindSeqLib.cmake
patches/: kmc-v3.2.4.patch  seqlib.patch
scripts/: TFRecordConverter.py  TFRecordConverter.yaml  npsv2_pb2.py  synthBAM  test.tar
src/: SV dVAE.ipynb
src/npsv3/: __about__.py  __init__.py  bindings.cpp  genotype.py  graph.py  image.py  main.py  pileup.py  realigner.cpp  realigner.hpp  realigner.py  simulation.py  topk.py  types.py  variant.py
src/npsv3/conf/: config.yaml  pileup.yaml  simulation.yaml
src/npsv3/conf/checkpoint/: base.yaml  full_train.yaml
src/npsv3/conf/checkpoint_callback/: base.yaml  best_loss.yaml
src/npsv3/conf/command/: assess_accuracy.yaml  encode.yaml  full_train.yaml  genotype.yaml  images.yaml  (+8 more)
src/npsv3/graphs/: genotype.py  graph.py  graph_constructor.py
src/npsv3/images/: annotated_array.py  example.py  generator.py  graph.py  population.py
src/npsv3/models/: dvae.py  loaders.py  metrics.py  paired.py  runners.py  streaming.py  transformer.py
src/npsv3/native/: fasta.cpp  fasta.hpp  graph.cpp  graph.hpp  graph_bindings.cpp  haplotype.cpp  haplotype.hpp  kmer.cpp  kmer.hpp  range.cpp  range.hpp  realigner.cpp  realigner.hpp  realigner_bindings.cpp  utility.hpp  variant.cpp  variant.hpp
src/npsv3/util/: config.py  range.py  reads.py  sample.py  timeout.py  vcf.py
test.NGbE14/: variant.vcf.gz.tbi
tests/: __init__.py  conftest.py  test_genotype.py  test_graph.py  test_image.py  test_paired_model.py  test_realigner.py
tests/data/: 12_22129565_22130387.background.vcf.gz.tbi  12_22129565_22130387.snvs.vcf.gz.tbi  13_94416486_94418485.vcf.gz.tbi  14_77187582_77187582.vcf.gz.tbi  1_16490549_16490549.sv.vcf.gz.tbi  1_16490549_16490549.vcf.gz.tbi  1_5473213_5475287.vcf.gz.tbi  HG00096.final.kmc.hist  HG00731.final.stats.json  HG00733.final.kmc.hist  Makefile  chr12_21976631_21977453.vcf.gz.tbi  chr13_29557414_29560096.inference.vcf.gz.tbi  chr13_29557414_29560096.vcf.gz.tbi  chr1_1924223_1924223.kmc.hist  chr1_41823764_41825818.sv.vcf.gz.tbi  chr1_41823764_41825818.vcf.gz.tbi  chr1_6011136_6013135.sv.vcf.gz.tbi  chr1_6011136_6013135.vcf.gz.tbi  chr1_853425_853622.sv.vcf.gz.tbi  chr1_853425_853622.vcf.gz.tbi  chr1_8976700_8978700.sv.vcf.gz.tbi  chr1_8976700_8978700.vcf.gz.tbi  chrY_56879191_56881191.sv.vcf.gz.tbi  chrY_56879191_56881191.vcf.gz.tbi  images-0000.tar  unphased_variant_images-0000.tar
tests/graph/: test_graph_constructor.py
tests/graphs/: test_genotype.py  test_graph.py  test_graph_constructor.py
tests/images/: test_example.py  test_graph.py  test_population.py
tests/models/: test_DINOV3.py  test_TYLER.py  test_dvae.py  test_loaders.py  test_metrics.py  test_paired.py  test_paired_loader.py  test_paired_model.py  test_streaming.py  test_transformer.py
tests/native/: test_graph.cpp  test_graph.py  test_haplotype.cpp  test_helpers.cpp  test_helpers.hpp  test_kmer.cpp  test_range.cpp  test_range.py  test_variant.cpp
tests/util/: test_range.py  test_sample.py  test_variant.py
(+40 files in other folders)
