[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "npsv3"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = {text ="MIT"}
keywords = []
authors = [
  { name = "Michael Linderman", email = "mlinderman@middlebury.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "hydra-core>=1.2",
  "portalocker",
  "ray>=1.2.0",
  "tqdm",
  "numpy>=1.14",
  "pandas>=1.3",
  "scipy>=1.2.0",
  "intervaltree",
  "pysam>=0.16",
  "pybedtools",
  "whatshap",
  "Pillow",
  "webdataset>=0.2.100",
  "torch",
  "torchvision",
  "lightning",
  "torchmetrics",
  "transformers",
  "timm",
  "tensorboard",
  "mosaicml-streaming",
]

[project.urls]
Documentation = "https://github.com/mlinderm/npsv3#readme"
Issues = "https://github.com/mlinderm/npsv3/issues"
Source = "https://github.com/mlinderm/npsv3"

[project.scripts]
npsv3 = "npsv3.main:main"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/npsv3/__about__.py"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/npsv3 tests}"

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "pytest-timeout",
  "debugpy>=1.8.0", # Needed by Ray
]
[tool.hatch.envs.hatch-test.env-vars]
RAY_ACCEL_ENV_VAR_OVERRIDE_ON_ZERO= "0"

[tool.hatch.envs.hatch-static-analysis]
dependencies = ["ruff==0.11.2"]
config-path = "ruff_defaults.toml"

[tool.coverage.run]
source_pkgs = ["npsv3", "tests"]
branch = true
parallel = true
omit = [
  "src/npsv3/__about__.py",
]

[tool.coverage.paths]
npsv3 = ["src/npsv3", "*/npsv3/src/npsv3"]
tests = ["tests", "*/npsv3/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
extend = "ruff_defaults.toml"
extend-exclude = ["lib"]

[tool.ruff.lint]
extend-ignore = [
  "S101", # Allow assert
  "N812", # Don't flag `import lightning as L` or similar conventions
] 

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*" = ["SLF001"]

# Define "standalone" environment for running the NPSV2-NPSV3 TFRecordConverter script
[tool.hatch.envs.tfrecordconverter]
template = "tfrecordconverter"
skip-install = true
dependencies = [
  "hydra-core",
  "hydra-submitit-launcher",
  "tensorflow-cpu",
  "webdataset>=0.2.100",
  "tqdm",
]

[tool.hatch.envs.tfrecordconverter.env-vars]
PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION = "python" # Since we are using NPSV2's outdated pb definition
PYTHONPATH = "{root}/scripts" # Make npsv2_phy import available
TF_CPP_MIN_LOG_LEVEL = "3" # Suppress warnings

[tool.hatch.envs.tfrecordconverter.scripts]
convert = "python scripts/TFRecordConverter.py {args}"
