[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "npsv3"
version = "0.0.1"
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = {text ="MIT"}
keywords = []
authors = [
  { name = "Michael Linderman", email = "mlinderman@middlebury.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "hydra-core>=1.2",
  "portalocker",
  "ray[default]>=1.2.0",
  "tqdm",
  "numpy>=1.14",
  "pandas>=1.3",
  "scipy>=1.2.0",
  "intervaltree",
  "pysam>=0.16",
  "pybedtools",
  "whatshap",
  "Pillow",
  "webdataset>=0.2.100",
  "torch",
  "torchvision",
  "lightning",
  "torchmetrics",
  "transformers",
  "timm",
  "tensorboard",
  "mosaicml-streaming",
]

[project.urls]
Documentation = "https://github.com/mlinderm/npsv3#readme"
Issues = "https://github.com/mlinderm/npsv3/issues"
Source = "https://github.com/mlinderm/npsv3"

[project.scripts]
npsv3 = "npsv3.main:main"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/npsv3 tests}"

[tool.hatch.envs.hatch-test]
# In build-isolation, uv, etc. ignores build.requires so pre-install build packages for npsv3 and its dependencies
pre-install-commands = [
  "uv pip install 'scikit-build-core[pyproject]>=0.4.3' 'nanobind>=1.3.2' setuptools setuptools_scm[toml] cython", 
]
extra-dependencies = [
  "pytest-timeout",
  "debugpy>=1.8.0", # Needed by Ray
]

[tool.hatch.envs.hatch-test.env-vars]
RAY_ACCEL_ENV_VAR_OVERRIDE_ON_ZERO = "0"
PIP_NO_BUILD_ISOLATION = "1"
UV_NO_BUILD_ISOLATION = "1"
PIP_INDEX_URL = "https://download.pytorch.org/whl/cpu" # Use CPU packages for tests to speed up installation
UV_EXTRA_INDEX_URL = "https://download.pytorch.org/whl/cpu" # UV's (extra) index url are reversed vs. pip

[tool.hatch.envs.hatch-static-analysis]
dependencies = ["ruff==0.11.2"]
config-path = "ruff_defaults.toml"

[tool.coverage.run]
source_pkgs = ["npsv3", "tests"]
branch = true
parallel = true
omit = [
  "src/npsv3/__about__.py",
]

[tool.coverage.paths]
npsv3 = ["src/npsv3", "*/npsv3/src/npsv3"]
tests = ["tests", "*/npsv3/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
extend = "ruff_defaults.toml"
extend-exclude = ["lib"]

[tool.ruff.lint]
extend-ignore = [
  "S101", # Allow assert
  "N812", # Don't flag `import lightning as L` or similar conventions
] 

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*" = ["SLF001"]

[tool.uv.extra-build-dependencies]
npsv3 = ["scikit-build-core[pyproject]", "nanobind"]

# Define "standalone" environment for running the NPSV2-NPSV3 TFRecordConverter script
[tool.hatch.envs.tfrecordconverter]
template = "tfrecordconverter"
skip-install = true
dependencies = [
  "hydra-core",
  "hydra-submitit-launcher",
  "tensorflow-cpu",
  "webdataset>=0.2.100",
  "tqdm",
]

[tool.hatch.envs.tfrecordconverter.env-vars]
PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION = "python" # Since we are using NPSV2's outdated pb definition
PYTHONPATH = "{root}/scripts" # Make npsv2_phy import available
TF_CPP_MIN_LOG_LEVEL = "3" # Suppress warnings

[tool.hatch.envs.tfrecordconverter.scripts]
convert = "python scripts/TFRecordConverter.py {args}"
