[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "npsv3"
version = "0.0.1"
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = {text ="MIT"}
keywords = []
authors = [
  { name = "Michael Linderman", email = "mlinderman@middlebury.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "hydra-core>=1.2",
  "portalocker",
  "ray[default]>=1.2.0",
  "tqdm",
  "numpy>=1.14",
  "pandas>=1.3",
  "scipy>=1.2.0",
  "intervaltree",
  "pysam>=0.16",
  "pybedtools",
  "whatshap",
  "Pillow",
  "webdataset>=0.2.100",
  "torch",
  "torchvision",
  "lightning",
  "torchmetrics",
  "transformers",
  "timm",
  "tensorboard",
  "mosaicml-streaming",
]

[project.urls]
Documentation = "https://github.com/mlinderm/npsv3#readme"
Issues = "https://github.com/mlinderm/npsv3/issues"
Source = "https://github.com/mlinderm/npsv3"

[project.scripts]
npsv3 = "npsv3.main:main"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.coverage.run]
source_pkgs = ["npsv3", "tests"]
branch = true
parallel = true
omit = [
  "src/npsv3/__about__.py",
]

[tool.coverage.paths]
npsv3 = ["src/npsv3", "*/npsv3/src/npsv3"]
tests = ["tests", "*/npsv3/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
extend = "ruff_defaults.toml"
extend-exclude = ["lib"]

[tool.ruff.lint]
extend-ignore = [
  "S101", # Allow assert
  "N812", # Don't flag `import lightning as L` or similar conventions
] 

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*" = ["SLF001"]

[tool.uv]
# Build npsv3 itself without isolation so the scikit-build-core/CMake build
# directory (build/{wheel_tag}) is reused for fast incremental rebuilds of the
# C++ extension across `uv sync` / `uv pip install` invocations.
no-build-isolation-package = ["npsv3"]
# Always include the "build" group so the build-time deps above are present
# in the shared environment before npsv3 itself is built.
default-groups = ["build", "dev"]

[dependency-groups]
# Build-time deps for npsv3 itself: since it builds without isolation (above),
# these must be present in the shared environment ahead of time.
build = [
  "scikit-build-core[pyproject]>=0.4.3",
  "nanobind>=1.3.2",
]
dev = [
  "coverage-enable-subprocess==1.0",
  "coverage[toml]~=7.11",
  "pytest~=9.0",
  "pytest-mock~=3.12",
  "pytest-randomly~=3.15",
  "pytest-rerunfailures~=14.0",
  "pytest-xdist[psutil]~=3.5",
  "pytest-timeout",
  "debugpy>=1.8.0", # Needed by Ray
  "mypy>=1.0.0",
  "ruff==0.11.2",
]
